--- a/terms-of-use.html
+++ b/terms-of-use.html
@@ -251,7 +251,7 @@
     <div class="background-card">
         <p style="text-align:center;"><img width="100" height="100" src="https://lh3.google.com/u/0/d/1gxijoHZuzmPwriNwco1nZSRhWj0X5rw1=w1920-h595-iv1"></p>
         <h5 style="text-align:center;color:rgb(145, 145, 145);">Copyright ©2024 UMETA, All rights reserved.</h5>
-        <a href="#" class="Terms-button">Terms of use</a>
+        <a href="https://www.umeta-metaverse.com/terms-of-use/terms-of-use.html" class="Terms-button">Terms of use</a>
     </div>
 </body>
 </html>
