--- a/terms-of-use.html
+++ b/terms-of-use.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>UMETA</title>
-    <link rel="icon" type="image/x-icon" href="https://lh3.google.com/u/0/d/1gxijoHZuzmPwriNwco1nZSRhWj0X5rw1=w1920-h595-iv1">
+    <link rel="icon" type="image/x-icon" href="https://media.discordapp.net/attachments/1112219851243663370/1303365731584315432/IMG_0163.png?ex=672b7d6d&is=672a2bed&hm=f8bfc6118b60339c67a0795b9bafde4b400519a5d053d3be27e93dd84e1ec810&=&format=webp&quality=lossless&width=602&height=602">
     <style>
         body {
             margin: 0;
@@ -131,7 +131,7 @@
 <body>
     <div class="nav-container">
         <div class="logo-area">
-            <img src="https://lh3.google.com/u/0/d/1uEXzowZSBSCrVwszgGUFtmzWtHZEe-QN=w1920-h595-iv1" alt="UMETA Logo" style="width: 100%; height: 100%; object-fit: contain;">
+            <img src="https://media.discordapp.net/attachments/1112219851243663370/1303365731584315432/IMG_0163.png?ex=672b7d6d&is=672a2bed&hm=f8bfc6118b60339c67a0795b9bafde4b400519a5d053d3be27e93dd84e1ec810&=&format=webp&quality=lossless&width=602&height=602" alt="UMETA Logo" style="width: 100%; height: 100%; object-fit: contain;">
         </div>
         <div class="button-bar">
             <a href="https://www.umeta-metaverse.com/home.html" class="button">Home</a>
@@ -249,7 +249,7 @@
     </div>
 
     <div class="background-card">
-        <p style="text-align:center;"><img width="100" height="100" src="https://lh3.google.com/u/0/d/1gxijoHZuzmPwriNwco1nZSRhWj0X5rw1=w1920-h595-iv1"></p>
+        <p style="text-align:center;"><img width="100" height="100" src="https://media.discordapp.net/attachments/1112219851243663370/1303365731584315432/IMG_0163.png?ex=672b7d6d&is=672a2bed&hm=f8bfc6118b60339c67a0795b9bafde4b400519a5d053d3be27e93dd84e1ec810&=&format=webp&quality=lossless&width=602&height=602"></p>
         <h5 style="text-align:center;color:rgb(145, 145, 145);">Copyright ©2024 UMETA, All rights reserved.</h5>
         <a href="https://www.umeta-metaverse.com/terms-of-use/terms-of-use.html" class="Terms-button">Terms of use</a>
     </div>
